fix for modal not showing properly on mobile portrait

--- a/app/styles/v2/Vivanuncios/partials/components/modal/_modal.scss
+++ b/app/styles/v2/Vivanuncios/partials/components/modal/_modal.scss
@@ -15,7 +15,7 @@
       background-color: white;
       width: 80%;
       position: relative;
-      top: 3em;
+      top: 0em;
       margin: 2em auto;
       padding: 1em;
       max-width: 23em;
